--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "terminal.integrated.env.osx": {
-        "PATH": "/Users/teodorstanishev/.platformio/penv/bin:/Users/teodorstanishev/.platformio/penv:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
+        "PATH": "/Users/teodorstanishev/.platformio/penv/bin:/Users/teodorstanishev/.platformio/penv:/Users/teodorstanishev/.pyenv/shims:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin",
         "PLATFORMIO_CALLER": "vscode"
     },
     "files.associations": {
